--- a/docs/example/pipeline/Experimentalist Pipeline Examples.ipynb
+++ b/docs/example/pipeline/Experimentalist Pipeline Examples.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Introduction\n",
+    "This notebook demonstrates the use of the `Pipeline` class to create Experimentalists. Experimentalists consist of two main components:\n",
+    "1. Condition Generation - Creating combinations of independent variables to test\n",
+    "2. Experimental Design - Ensuring conditions meet design constraints.\n",
+    "\n",
+    "The `Pipeline` class allows us to define a series of functions to generate and process a pool of conditions that conform to an experimental design."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -16,23 +42,6 @@
    ],
    "metadata": {
     "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Introduction\n",
-    "This notebook demonstrates the use of the `Pipeline` class to create Experimentalists. Experimentalists consist of two main components:\n",
-    "1. Condition Generation - Creating combinations of independent variables to test\n",
-    "2. Experimental Design - Ensuring conditions meet design constraints.\n",
-    "\n",
-    "The `Pipeline` class allows us to define a series of functions to generate and process a pool of conditions that conform to an experimental design.\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
    }
   },
   {
@@ -58,10 +67,7 @@
     "The examples in this notebook will create a Weber line-lengths experiment. The Weber experiment tests human detection of differences between the lengths of two lines. The first example will sample a pool with simple random sampling. We will first define the independent and dependent variables (IVs and DVs, respectively).\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -102,10 +108,7 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -153,10 +156,7 @@
     "The pipeline is run twice below to illustrate that random sampling is performed. Rerunning the cell will produce different results.\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -172,10 +172,7 @@
     "      f'Run 2: {results2}')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
