--- a/docs/example/synthetic/inventory.ipynb
+++ b/docs/example/synthetic/inventory.ipynb
@@ -3,15 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "from autora.synthetic import retrieve, Inventory"
-   ]
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from autora.synthetic import retrieve, Inventory\n",
+    "from sklearn.linear_model import LinearRegression"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
