--- a/docs/example/theorist/bms/search_space.ipynb
+++ b/docs/example/theorist/bms/search_space.ipynb
@@ -31,8 +31,27 @@
     "- **tanh**: The output of the computation $x_j$ is the hyperbolic tangent function applied to its input $x_i$: $x_j = \\tanh(x_i)$.\n",
     "- **\\*\\***: The output of the computation $x_j$ is the first input raised to the power of the second input $x_i,x_{ii}$: $x_j$ = $x_i^{x_{ii}}$.\n",
     "\n",
-    "## Example\n",
-    "\n",
+    "## Example"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "The following example sets up a search space over four illustrative operations found in Wikipedia pages that are tagged by psychology. These operations are our primitives:"
    ],
    "metadata": {
@@ -42,11 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
+    "\n",
     "primitives = {\n",
     "    \"Psychology\": {\n",
     "        \"addition\": 5.8,\n",
@@ -55,7 +72,10 @@
     "        \"division\": 5.5,\n",
     "    }\n",
     "}"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
