--- a/docs/example/theorist/bms/weber.ipynb
+++ b/docs/example/theorist/bms/weber.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "41b221c2",
    "metadata": {},
