--- a/docs/example/theorist/bsr/bsr.ipynb
+++ b/docs/example/theorist/bsr/bsr.ipynb
@@ -59,6 +59,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "outputs": [
     {
@@ -71,7 +83,7 @@
     }
    ],
    "source": [
-    "from autora_bsr.skl.bsr import BSRRegressor\n",
+    "from autora.skl.bsr import BSRRegressor\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -100,7 +112,7 @@
     "<br>\n",
     "\n",
     "## References\n",
-    "Jin, Ying, et al. \"Bayesian symbolic regression.\" arXiv preprint arXiv:1910.08892 (2019)."
+    "Jin, Ying, et al. \"Bayesian symbolic regression.\" arXiv preprint arXiv:1910.08892 (2019).\n"
    ],
    "metadata": {
     "collapsed": false
