--- a/docs/example/theorist/darts/example.ipynb
+++ b/docs/example/theorist/darts/example.ipynb
@@ -5,10 +5,29 @@
    "source": [
     "# Differentiable Architecture Search\n",
     "\n",
-    "## Example\n",
-    "\n",
+    "## Example"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Let's generate a simple data set with two features $x_1, x_2 \\in [0, 1]$ and a target $y$. We will use the following generative model:\n",
-    "$y = 2 x_1 - e^{(5 x_2)}$\n"
+    "$y = 2 x_1 - e^{(5 x_2)}$"
    ],
    "metadata": {
     "collapsed": false
@@ -28,7 +47,7 @@
     "x_2 = np.linspace(0, 1, num=10)\n",
     "X = np.array(np.meshgrid(x_1, x_2)).T.reshape(-1,2)\n",
     "\n",
-    "y = 2 * X[:,0] + np.exp(5 * X[:,1])\n"
+    "y = 2 * X[:,0] + np.exp(5 * X[:,1])"
    ]
   },
   {
