--- a/docs/example/cycle/simple_cycle_uncertainty_experimentalist.ipynb
+++ b/docs/example/cycle/simple_cycle_uncertainty_experimentalist.ipynb
@@ -16,6 +16,18 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.dummy import DummyRegressor\n",
