--- a/docs/example/theorist/darts/weber.ipynb
+++ b/docs/example/theorist/darts/weber.ipynb
@@ -9,11 +9,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Uncomment the following line when running on Google Colab\n",
+    "# !pip install autora"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "outputs": [],
    "source": [
     "from functools import partial\n",
-    "from io import StringIO\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
