deps: update paths to regressor

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -105,7 +105,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "from autora.skl.darts import DARTSRegressor\n",
+    "from autora.theorist.darts import DARTSRegressor\n",
     "\n",
     "darts_estimator = DARTSRegressor(\n",
     "    num_graph_nodes=1,\n",
