docs: more structure updates

--- a/docs/User Guide/Theorists/DARTS/example.ipynb
+++ b/docs/User Guide/Theorists/DARTS/example.ipynb
@@ -5,7 +5,9 @@
    "source": [
     "# Differentiable Architecture Search\n",
     "\n",
-    "## Example"
+    "## Tutorial: Recovering the exponential learning curve model\n",
+    "\n",
+    "In this tutorial, we'll learn how to use Differentiable Architecture Search (DARTS) as a theorist to recover the exponential learning curve model."
    ],
    "metadata": {
     "collapsed": false
